--- a/Capstone.Web/Views/Park/Detail.cshtml
+++ b/Capstone.Web/Views/Park/Detail.cshtml
@@ -9,20 +9,33 @@
 
 <div class="container-fluid parkDetailHeader">
     <h2 class="detailText" >@(Model.ParkName.Replace(" National Park", ""))</h2>
-    <p class="detailText" style="display:inline-block">National Park | @Model.State</p>
+    <p class="detailText" style="display:inline-block; ">National Park | @Model.State</p>
 </div>
 
 <div class="container-fluid even">
 
     <img src="~/Content/img/parks/@(Model.ParkCode).jpg" />
+    <div style ="display:inline-block; width: 50%" class="container-fluid">
+        <p style="padding-left:30px; display:inline-block">@Model.ParkDescription</p>
+        <p style="padding-top:10px; padding-left: 30px; display: inline-block">@Model.InspirationalQuote</p><br />
+        <p style="padding-left: 30px; display: inline-block"><strong>-@Model.InspirationalQuoteSource</strong></p>
 
-    <p style="padding-left:30px; width:50%; display:inline-block">@Model.ParkDescription</p>
+    </div>
+</div>
+
+<div class="container-fluid weather">
+    <h2><strong>Weather</strong></h2>
+    <div class="container-fluid days">
+        @foreach (Weather weather in Model.Forecast)
+        {
+            <div class="container-fluid day">
+                <h3><strong>@weather.DayOfWeek(weather.FiveDayForecastValue)</strong></h3>
+                <img src="~/Content/img/weather/@(weather.Forecast.Replace(" ", "")).png" alt="Alternate Text" />
+                <p style="font-size: large">High: @weather.High</p>
+                <p style="font-size: large">Low: @weather.Low</p>
+            </div>
+        }
+    </div>
 
 </div>
 
-<div class="container-fluid odd">
-
-    <p style="padding-top:10px;">@Model.InspirationalQuote</p><br />
-    <p><strong>-@Model.InspirationalQuoteSource</strong></p>
-
-</div>
