--- a/Capstone.Web/Content/style.css
+++ b/Capstone.Web/Content/style.css
@@ -47,5 +47,14 @@ nav{
 }
 .day{
     padding: 0px 25px; 
-    
+    width:19%;
+}
+
+.forecastImage{
+    width:50px;
+    height:50px;
+}
+
+.detailImage{
+    vertical-align:top;
 }
