Worked on Survey and SurveyDAL to get it display the Survey and to add it into the npgeek database

--- a/Capstone.Web/Content/style.css
+++ b/Capstone.Web/Content/style.css
@@ -58,3 +58,10 @@ nav{
 .detailImage{
     vertical-align:top;
 }
+.survey{
+    margin-top: 50px; 
+}
+.field-validation-error{
+    color: red; 
+    font-weight: bold; 
+}
