--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -36,13 +36,8 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Parks
                     <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        @foreach(Park park in new ParkSqlDAL().GetAllParks())
-                        {
-                            <li><a href="/Park/Detail/?parkCode=@park.ParkCode">@park.ParkName</a></li>
-                        }
-                        
+                       @Html.Action("GetParks", "Home") 
                     </ul>
-                   
                 </li>
                 <li>@Html.ActionLink("Survey", "Survey", "Park") </li>
 </ul>
